bug-fix/normalize, font700, wrapping

--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,9 @@
 .intro__list {
     max-width: 690px;
 
-    font-weight: 900;
+    font-weight: 700;
     font-size: 12px;
     line-height: 1.5;
-    letter-spacing: -.1px;
 }
 
 @media screen and (max-width: 991.98px) {
